refactor(routes): move swagger to home route
